feat: added ns-stats binary
